# app/Http/Controllers/API/V1/LogController.php
@@ -1,0 +1,41 @@
+<?php
+
+namespace App\Http\Controllers\API\V1;
+
+use App\Http\Controllers\Controller;
+use App\Http\Resources\ProjectResource;
+use App\Models\Log;
+
+class LogController extends Controller
+{
+    /**
+     * Display a listing of the resource.
+     *
+     * @return \Illuminate\Http\Response
+     *
+     *
+     * @OA\Get(
+     *      path="/logs",
+     *      operationId="getLogsList",
+     *      tags={"Logs"},
+     *      summary="Get list of logs",
+     *      description="Returns list of logs",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/ProjectResource")
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *     )
+     */
+    public function getlist() {
+        return response([ 'logss' => ProjectResource::collection(Log::all()), 'message' => 'Retrieved successfully'], 200);
+    }
+}
