# routes/web.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\API\V1\ImageController;
+use App\Http\Controllers\LogController;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -21,3 +22,4 @@ Route::get('/', function () {
 Route::apiResource('images', ImageController::class, ['except' => 'update']);
 Route::post('api/v1/imagesBase64', 'App\Http\Controllers\API\V1\ImageController@storeBase64');
 Route::post('api/v1/imagesFromUrl', 'App\Http\Controllers\API\V1\ImageController@imagesFromUrl');
+Route::get('api/v1/logs', 'App\Http\Controllers\API\V1\LogController@getlist');
